// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColumnConfiguration component should render all columns 1`] = `
<DocumentFragment>
  <a
    href="/uniprotkb/P21802"
  >
    P21802 (Swiss-Prot)
  </a>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 2`] = `
<DocumentFragment>
  <span>
    uniprot id
  </span>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 3`] = `
<DocumentFragment>
  <div>
    <strong>
      rec full Name
    </strong>
  </div>
  <div>
    1.2.3.4
  </div>
  <div>
    recommended short name
  </div>
  <div>
    <ul
      class="no-bullet"
    >
      <li>
        a full alt Name (short alt name1) 
      </li>
    </ul>
  </div>
  <div>
    <ul
      class="no-bullet"
    >
      <li>
        containsrec full Name (containsrecommended short name)  
        <strong>
          Alternative names: 
        </strong>
        containsa full alt Name (containsshort alt name1) 
      </li>
    </ul>
  </div>
  <div>
    <ul
      class="no-bullet"
    >
      <li>
        sub full Name
      </li>
    </ul>
  </div>
  <div>
    biotech
  </div>
  <div />
  <div />
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 4`] = `
<DocumentFragment>
  <div>
    <strong>
      some Gene
    </strong>
  </div>
  <div>
    some Syn
  </div>
  <div>
    some orf
  </div>
  <div>
    some locus
  </div>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 5`] = `
<DocumentFragment>
  <a
    href="/taxonomy/9606"
  >
    scientific name (common name)  (synonyms 1)
  </a>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 6`] = `
<DocumentFragment>
  10 Da
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 7`] = `
<DocumentFragment>
  <div>
    some Gene
  </div>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 8`] = `
<DocumentFragment>
  some locus
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 9`] = `
<DocumentFragment>
  some orf
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 10`] = `
<DocumentFragment>
  some Syn
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 11`] = `
<DocumentFragment>
  <a
    href="/taxonomy/9606"
  >
    9606 
  </a>
  <a
    class="external-link"
    href="https://www.ncbi.nlm.nih.gov/Taxonomy/Browser/wwwtax.cgi?lvl=0&id=9606"
    target="_blank"
  >
    NCBI
    <svg
      viewBox="0 0 576 512"
      width="12.5"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M576 24v127.984c0 21.461-25.96 31.98-40.971 16.971l-35.707-35.709-243.523 243.523c-9.373 9.373-24.568 9.373-33.941 0l-22.627-22.627c-9.373-9.373-9.373-24.569 0-33.941L442.756 76.676l-35.703-35.705C391.982 25.9 402.656 0 424.024 0H552c13.255 0 24 10.745 24 24zM407.029 270.794l-16 16A23.999 23.999 0 0 0 384 303.765V448H64V128h264a24.003 24.003 0 0 0 16.97-7.029l16-16C376.089 89.851 365.381 64 344 64H48C21.49 64 0 85.49 0 112v352c0 26.51 21.49 48 48 48h352c26.51 0 48-21.49 48-48V287.764c0-21.382-25.852-32.09-40.971-16.97z"
      />
    </svg>
  </a>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 12`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 13`] = `
<DocumentFragment>
  lineage 1
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 14`] = `
<DocumentFragment>
  <p>
    <a
      href="/taxonomy/9606"
    >
      scientific name (common name)  (synonyms 1)
    </a>
  </p>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 15`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 16`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    The sequence 
    <a
      class="external-link"
      href="//www.ebi.ac.uk/ena/data/view/sequence"
      target="_blank"
    >
      sequence
      <svg
        viewBox="0 0 576 512"
        width="12.5"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M576 24v127.984c0 21.461-25.96 31.98-40.971 16.971l-35.707-35.709-243.523 243.523c-9.373 9.373-24.568 9.373-33.941 0l-22.627-22.627c-9.373-9.373-9.373-24.569 0-33.941L442.756 76.676l-35.703-35.705C391.982 25.9 402.656 0 424.024 0H552c13.255 0 24 10.745 24 24zM407.029 270.794l-16 16A23.999 23.999 0 0 0 384 303.765V448H64V128h264a24.003 24.003 0 0 0 16.97-7.029l16-16C376.089 89.851 365.381 64 344 64H48C21.49 64 0 85.49 0 112v352c0 26.51 21.49 48 48 48h352c26.51 0 48-21.49 48-48V287.764c0-21.382-25.852-32.09-40.971-16.97z"
        />
      </svg>
    </a>
     differs from that shown. Reason: Erroneous initiation Text note
    <span
      class="evidence-tag svg-colour-unreviewed"
      data-testid="evidence-tag-trigger"
      role="button"
      tabindex="0"
    >
      <svg
        height="12"
        viewBox="0 0 400 512"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M400 144H256V0l144 144zm-176 32V0H0v512h400V176H224z"
          id="Shape"
        />
      </svg>
      <span
        class="evidence-tag__label"
        title=""
      >
        1 automatic annotation
      </span>
    </span>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
    >
      <div>
        <h5>
          Automatic assertion according to rules
        </h5>
        <div>
          PIRNR:PIRNR001361
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;
